# stargazers

./: .gitignore  Makefile  README.md  pyproject.toml
.cursor/rules/: 01-project-overview.mdc  02-development-guidelines.mdc  03-code-organization.mdc
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: pytest.yml
stargazers/: cli.py
tests/: test_stargazers.py
