[project]
name = "stargazers"
version = "0.1.0"
description = "GitHub Stargazer Analyzer CLI"
authors = [{ name = "Will McGinnis" }]
dependencies = [
    "httpx",
    "pandas",
    "rich",
    "python-dotenv",
    "click",
    "plotext"
]
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-httpx",
    "ruff",
    "python-dotenv"
]

[project.scripts]
stargazers = "stargazers.cli:cli"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "B", "S"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["stargazers"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Ignore unused imports in __init__.py files
"tests/**/*.py" = ["B011", "S101"]  # Ignore assert warnings in test files

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
markers = [
    "httpx: Mark the test as using httpx.",
] 